Fixed build target, removed unnecessary directory.

--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.yugabyte</groupId>
-  <artifactId>yb-sample-apps</artifactId>
+  <artifactId>newsql-benchmarks</artifactId>
   <version>1.0</version>
-  <name>YB Sample Apps</name>
+  <name>NewSQL Benchmarks</name>
   <packaging>jar</packaging>
 
    <!-- Properties Management -->
@@ -14,7 +14,6 @@
     <maven-dependency-plugin.phase>prepare-package</maven-dependency-plugin.phase>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <skipDockerBuildBuild>false</skipDockerBuildBuild>
   </properties>
 
   <dependencies>
@@ -126,7 +125,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
         <configuration>
-          <finalName>yb-sample-apps</finalName>
+          <finalName>newsql-benchmarks</finalName>
           <appendAssemblyId>false</appendAssemblyId>
           <archive>
             <manifest>
@@ -148,28 +147,6 @@
         </executions>
       </plugin>
 
-      <plugin>
-        <groupId>com.spotify</groupId>
-        <artifactId>dockerfile-maven-plugin</artifactId>
-        <version>1.4.10</version>
-        <executions>
-          <execution>
-            <id>default</id>
-            <goals>
-              <goal>build</goal>
-              <goal>push</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <repository>yugabytedb/yb-sample-apps</repository>
-          <tag>${project.version}</tag>
-          <buildArgs>
-            <JAR_FILE>${project.artifactId}.jar</JAR_FILE>
-          </buildArgs>
-          <skip>${skipDockerBuild}</skip>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 
